kubernetes-course/apps/app-8/echoservice.yml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-default
  labels:
    app: echoheaders
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30302
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echoheaders
