kubernetes-course/apps/app-8/ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
    - host: helloworld-v1.kubernetes.backwards.limited
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld-v1
              servicePort: 80
    - host: helloworld-v2.kubernetes.backwards.limited
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld-v2
              servicePort: 80
